Add swagger doc for /users
